--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "build": "vite build",
     "preview": "vite preview --host",
     "start": "npm run dev",
-    "test": "vitest",
-    "test:run": "vitest run",
-    "test:coverage": "vitest run --coverage",
+    "test": "npm run test:unit && npm run test:e2e",
+    "test:unit": "vitest run tests/*.test.js",
+    "test:unit:watch": "vitest tests/*.test.js",
+    "test:unit:coverage": "vitest run tests/*.test.js --coverage",
+    "test:e2e": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:all": "npm run test:unit && npm run test:e2e",
     "lint": "prettier --check .",
     "lint:fix": "prettier --write .",
     "prepare": "husky"
@@ -37,10 +43,12 @@
   },
   "homepage": "https://github.com/your-username/multi-timer#readme",
   "devDependencies": {
+    "@playwright/test": "^1.56.1",
     "@vitest/coverage-v8": "^3.2.4",
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "prettier": "3.6.2",
+    "terser": "^5.44.0",
     "vite": "^7.1.10",
     "vitest": "^3.2.4"
   },
