Refactor Multi-Timer application for improved accessibility and testing. Added data-testid attributes for better testability, updated Playwright tests for timer interactions, and modified package configurations for compatibility with Node.js 20 and PNPM 10. Removed obsolete audio tests and integrated troubleshooting steps in CI workflows.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -7,8 +7,8 @@ on:
     branches: [main, develop]
 
 env:
-  NODE_VERSION: '18'
-  PNPM_VERSION: '8'
+  NODE_VERSION: '20'
+  PNPM_VERSION: '10'
 
 jobs:
   # Unit Tests Job
@@ -47,6 +47,39 @@ jobs:
         run: |
           pnpm config set enable-pre-post-scripts true
           pnpm config set enable-build-scripts true
+
+      - name: Troubleshoot lockfile issues
+        run: |
+          echo "=== CI Environment Debug Information ==="
+          echo "Current working directory: $(pwd)"
+          echo "Repository name: ${{ github.repository }}"
+          echo "Repository path: ${{ github.workspace }}"
+          echo "GitHub ref: ${{ github.ref }}"
+          echo "GitHub event name: ${{ github.event_name }}"
+          echo ""
+          echo "=== File System Check ==="
+          echo "Contents of current directory:"
+          ls -la
+          echo ""
+          echo "Looking for pnpm-lock.yaml:"
+          find . -name "pnpm-lock.yaml" -type f 2>/dev/null || echo "pnpm-lock.yaml not found"
+          echo ""
+          echo "Looking for package.json:"
+          find . -name "package.json" -type f 2>/dev/null || echo "package.json not found"
+          echo ""
+          echo "=== pnpm Configuration ==="
+          pnpm config list
+          echo ""
+          echo "=== pnpm Version ==="
+          pnpm --version
+          echo ""
+          echo "=== Node Version ==="
+          node --version
+          echo ""
+          echo "=== Environment Variables ==="
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_REF: $GITHUB_REF"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -101,6 +134,39 @@ jobs:
         run: |
           pnpm config set enable-pre-post-scripts true
           pnpm config set enable-build-scripts true
+
+      - name: Troubleshoot lockfile issues
+        run: |
+          echo "=== CI Environment Debug Information ==="
+          echo "Current working directory: $(pwd)"
+          echo "Repository name: ${{ github.repository }}"
+          echo "Repository path: ${{ github.workspace }}"
+          echo "GitHub ref: ${{ github.ref }}"
+          echo "GitHub event name: ${{ github.event_name }}"
+          echo ""
+          echo "=== File System Check ==="
+          echo "Contents of current directory:"
+          ls -la
+          echo ""
+          echo "Looking for pnpm-lock.yaml:"
+          find . -name "pnpm-lock.yaml" -type f 2>/dev/null || echo "pnpm-lock.yaml not found"
+          echo ""
+          echo "Looking for package.json:"
+          find . -name "package.json" -type f 2>/dev/null || echo "package.json not found"
+          echo ""
+          echo "=== pnpm Configuration ==="
+          pnpm config list
+          echo ""
+          echo "=== pnpm Version ==="
+          pnpm --version
+          echo ""
+          echo "=== Node Version ==="
+          node --version
+          echo ""
+          echo "=== Environment Variables ==="
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_REF: $GITHUB_REF"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -164,6 +230,39 @@ jobs:
           pnpm config set enable-pre-post-scripts true
           pnpm config set enable-build-scripts true
 
+      - name: Troubleshoot lockfile issues
+        run: |
+          echo "=== CI Environment Debug Information ==="
+          echo "Current working directory: $(pwd)"
+          echo "Repository name: ${{ github.repository }}"
+          echo "Repository path: ${{ github.workspace }}"
+          echo "GitHub ref: ${{ github.ref }}"
+          echo "GitHub event name: ${{ github.event_name }}"
+          echo ""
+          echo "=== File System Check ==="
+          echo "Contents of current directory:"
+          ls -la
+          echo ""
+          echo "Looking for pnpm-lock.yaml:"
+          find . -name "pnpm-lock.yaml" -type f 2>/dev/null || echo "pnpm-lock.yaml not found"
+          echo ""
+          echo "Looking for package.json:"
+          find . -name "package.json" -type f 2>/dev/null || echo "package.json not found"
+          echo ""
+          echo "=== pnpm Configuration ==="
+          pnpm config list
+          echo ""
+          echo "=== pnpm Version ==="
+          pnpm --version
+          echo ""
+          echo "=== Node Version ==="
+          node --version
+          echo ""
+          echo "=== Environment Variables ==="
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_REF: $GITHUB_REF"
+
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
 
@@ -207,6 +306,39 @@ jobs:
         run: |
           pnpm config set enable-pre-post-scripts true
           pnpm config set enable-build-scripts true
+
+      - name: Troubleshoot lockfile issues
+        run: |
+          echo "=== CI Environment Debug Information ==="
+          echo "Current working directory: $(pwd)"
+          echo "Repository name: ${{ github.repository }}"
+          echo "Repository path: ${{ github.workspace }}"
+          echo "GitHub ref: ${{ github.ref }}"
+          echo "GitHub event name: ${{ github.event_name }}"
+          echo ""
+          echo "=== File System Check ==="
+          echo "Contents of current directory:"
+          ls -la
+          echo ""
+          echo "Looking for pnpm-lock.yaml:"
+          find . -name "pnpm-lock.yaml" -type f 2>/dev/null || echo "pnpm-lock.yaml not found"
+          echo ""
+          echo "Looking for package.json:"
+          find . -name "package.json" -type f 2>/dev/null || echo "package.json not found"
+          echo ""
+          echo "=== pnpm Configuration ==="
+          pnpm config list
+          echo ""
+          echo "=== pnpm Version ==="
+          pnpm --version
+          echo ""
+          echo "=== Node Version ==="
+          node --version
+          echo ""
+          echo "=== Environment Variables ==="
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_REF: $GITHUB_REF"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
@@ -259,6 +391,39 @@ jobs:
         run: |
           pnpm config set enable-pre-post-scripts true
           pnpm config set enable-build-scripts true
+
+      - name: Troubleshoot lockfile issues
+        run: |
+          echo "=== CI Environment Debug Information ==="
+          echo "Current working directory: $(pwd)"
+          echo "Repository name: ${{ github.repository }}"
+          echo "Repository path: ${{ github.workspace }}"
+          echo "GitHub ref: ${{ github.ref }}"
+          echo "GitHub event name: ${{ github.event_name }}"
+          echo ""
+          echo "=== File System Check ==="
+          echo "Contents of current directory:"
+          ls -la
+          echo ""
+          echo "Looking for pnpm-lock.yaml:"
+          find . -name "pnpm-lock.yaml" -type f 2>/dev/null || echo "pnpm-lock.yaml not found"
+          echo ""
+          echo "Looking for package.json:"
+          find . -name "package.json" -type f 2>/dev/null || echo "package.json not found"
+          echo ""
+          echo "=== pnpm Configuration ==="
+          pnpm config list
+          echo ""
+          echo "=== pnpm Version ==="
+          pnpm --version
+          echo ""
+          echo "=== Node Version ==="
+          node --version
+          echo ""
+          echo "=== Environment Variables ==="
+          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
+          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
+          echo "GITHUB_REF: $GITHUB_REF"
 
       - name: Install dependencies
         run: pnpm install --frozen-lockfile
