--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "test:unit:watch": "vitest tests/*.test.js",
     "test:unit:coverage": "vitest run tests/*.test.js --coverage",
     "test:e2e": "playwright test",
+    "test:e2e:report": "playwright test --reporter=html",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
