--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "npm run test:unit && npm run test:e2e",
     "test:unit": "vitest run tests/*.test.js",
     "test:unit:watch": "vitest tests/*.test.js",
-    "test:unit:coverage": "vitest run tests/*.test.js --coverage 2>&1 | tee coverage-output.log && node scripts/extract-coverage-summary.js",
+    "test:unit:coverage": "vitest run tests/*.test.js --coverage 2>&1 | tee coverage-output.log && node scripts/extract-coverage-summary.js coverage-output.log",
     "test:e2e": "playwright test",
     "test:e2e:report": "playwright test --reporter=html",
     "test:e2e:ui": "playwright test --ui",
