Rename Multi-Timer application to Interview Timer, update related documentation, and add MIT License. Adjusted CI/CD workflows and package configurations to reflect the new application name. Enhanced README and other files for clarity and consistency.

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -116,124 +116,6 @@ jobs:
           fi
           echo '```' >> $GITHUB_STEP_SUMMARY
 
-  # E2E Tests Job
-  e2e-tests:
-    name: E2E Tests
-    runs-on: ubuntu-latest
-    container:
-      image: mcr.microsoft.com/playwright:v1.50.0-noble
-
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: ${{ env.NODE_VERSION }}
-
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v2
-        with:
-          version: ${{ env.PNPM_VERSION }}
-
-      - name: Get pnpm store directory
-        shell: bash
-        run: |
-          echo "STORE_PATH=$(pnpm store path --silent)" >> $GITHUB_ENV
-
-      - name: Setup pnpm cache
-        uses: actions/cache@v3
-        with:
-          path: ${{ env.STORE_PATH }}
-          key: ${{ runner.os }}-pnpm-store-${{ hashFiles('**/pnpm-lock.yaml') }}
-          restore-keys: |
-            ${{ runner.os }}-pnpm-store-
-
-      - name: Configure pnpm for CI
-        run: |
-          pnpm config set enable-pre-post-scripts true
-          pnpm config set enable-build-scripts true
-
-      - name: Troubleshoot lockfile issues
-        run: |
-          echo "=== CI Environment Debug Information ==="
-          echo "Current working directory: $(pwd)"
-          echo "Repository name: ${{ github.repository }}"
-          echo "Repository path: ${{ github.workspace }}"
-          echo "GitHub ref: ${{ github.ref }}"
-          echo "GitHub event name: ${{ github.event_name }}"
-          echo ""
-          echo "=== File System Check ==="
-          echo "Contents of current directory:"
-          ls -la
-          echo ""
-          echo "Looking for pnpm-lock.yaml:"
-          find . -name "pnpm-lock.yaml" -type f 2>/dev/null || echo "pnpm-lock.yaml not found"
-          echo ""
-          echo "Looking for package.json:"
-          find . -name "package.json" -type f 2>/dev/null || echo "package.json not found"
-          echo ""
-          echo "=== pnpm Configuration ==="
-          pnpm config list
-          echo ""
-          echo "=== pnpm Version ==="
-          pnpm --version
-          echo ""
-          echo "=== Node Version ==="
-          node --version
-          echo ""
-          echo "=== Environment Variables ==="
-          echo "GITHUB_WORKSPACE: $GITHUB_WORKSPACE"
-          echo "GITHUB_REPOSITORY: $GITHUB_REPOSITORY"
-          echo "GITHUB_REF: $GITHUB_REF"
-
-      - name: Install dependencies
-        run: pnpm install --frozen-lockfile
-
-      - name: Install Playwright browsers
-        run: pnpm exec playwright install --with-deps
-
-      - name: Run E2E tests
-        run: pnpm run test:e2e
-
-      - name: Report E2E Test Results
-        if: always()
-        uses: dorny/test-reporter@v2
-        with:
-          name: E2E Test Results
-          path: playwright-test-results/junit.xml
-          reporter: jest-junit
-          fail-on-error: false
-
-      - name: Upload Playwright report
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-report
-          path: playwright-report/
-          retention-days: 30
-
-      - name: Upload test results
-        uses: actions/upload-artifact@v4
-        if: always()
-        with:
-          name: playwright-test-results
-          path: playwright-test-results/
-          retention-days: 30
-
-      - name: Generate E2E Test Summary
-        if: always()
-        run: |
-          echo "### E2E Test Results 🎭" >> $GITHUB_STEP_SUMMARY
-          echo '```' >> $GITHUB_STEP_SUMMARY
-          if [ -f "playwright-test-results/junit.xml" ]; then
-            echo "E2E tests completed - see detailed results in artifacts" >> $GITHUB_STEP_SUMMARY
-          else
-            echo "E2E test results not available" >> $GITHUB_STEP_SUMMARY
-          fi
-          echo '```' >> $GITHUB_STEP_SUMMARY
-
   # Lint Job
   lint:
     name: Lint
@@ -314,7 +196,7 @@ jobs:
   build:
     name: Build
     runs-on: ubuntu-latest
-    needs: [unit-tests, e2e-tests, lint]
+    needs: [unit-tests, lint]
 
     steps:
       - name: Checkout code
