--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "test:all": "npm run test:unit && npm run test:e2e",
     "lint": "prettier --check .",
     "lint:fix": "prettier --write .",
-    "prepare": "husky"
+    "optimize:snapshots": "node scripts/optimize-snapshots.js",
+    "prepare": "husky",
+    "pre-commit": ".husky/pre-commit"
   },
   "keywords": [
     "timer",
@@ -33,11 +35,12 @@
   "author": "Interview Timer Team",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
-      "esbuild"
+      "esbuild",
+      "sharp"
     ]
   },
   "repository": {
@@ -54,11 +57,13 @@
     "husky": "^9.1.7",
     "jsdom": "^25.0.1",
     "prettier": "3.6.2",
+    "sharp": "^0.34.4",
     "terser": "^5.44.0",
     "vite": "^7.1.10",
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.5.0",
     "alpinejs": "^3.15.0"
   }
 }
