--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -276,12 +276,12 @@ jobs:
           path: dist/
           retention-days: 7
 
-  # Deploy to Vercel (only on main branch)
+  # Deploy to Vercel (only on main branch pushes, never on PRs)
   deploy:
     name: Deploy to Vercel
     runs-on: ubuntu-latest
     needs: [build]
-    if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+    if: github.ref == 'refs/heads/main' && github.event_name == 'push' && !github.event.pull_request
 
     steps:
       - name: Checkout code
